# dj-track-similarity

./: .gitattributes  .gitignore  .vale.ini  AGENTS.md  DB_OPTIMIZATION_PLAN.md  DB_SCHEMA_OPTIMIZATION_RESEARCH.md  DESIGN.md  README.md  README.ru.md  REFACTOR_AUDIT.md  pyproject.toml  run_server.cmd  run_server_lan.cmd  vocal_tracks_approx.txt  vocal_tracks_approx_report.txt
docs/: README.md  maest_multiwindow_benchmark.md  project-guide.md
docs/_redesign-draft/: DOCS_REDESIGN_PLAN.md  ROLE_AUDIT.md
frontend/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: backfill_maest_syncopated_rhythm.py  benchmark_maest_multiwindow.py  benchmark_search.py  create_library_v4_from_v3.py  diagnose_metadata_size.py  migrate_database_v3.py  migrate_sonara_brightness.py  optimize_database.py  qa_schema_v7.py  repair_audio_metadata.py  repair_malformed_metadata_json.py  repair_mutagen_wav_id3.py  run_server.cmd  run_server_launcher.py  sonara_bpm_calibration.py  strip_sonara_descriptions.py  verify_dev_milestone.ps1
tests/: evaluation_v7_fixtures.py  test_analysis_config.py  test_analysis_job_modules.py  test_analysis_jobs.py  test_analysis_orchestration_v7.py  test_analysis_pipeline.py  test_analysis_repository_v7.py  test_analysis_sonara_preflight_v7.py  test_ann_index.py  test_ann_runtime_v7.py  test_api_analysis_jobs.py  test_api_audio_dedup.py  test_api_audio_doctor.py  test_api_database_selection.py  test_api_dialog.py  test_api_docs.py  test_api_evaluation.py  test_api_genres.py  test_api_hybrid_search.py  test_api_reference_compare.py  test_api_rhythm_lab.py  test_api_route_modules.py  test_api_runtime_v7.py  test_api_server_shutdown.py  test_api_set_builder.py  test_api_sonara_search.py  test_api_text_search.py  test_api_tracks.py  test_artifact_identity.py  test_audio_dedup_v7.py  test_audio_loader.py  test_backfill_maest_syncopated_rhythm.py  test_break_energy.py  test_clap_query_workflow_scripts.py  test_classifier_jobs_aggregate.py  test_classifier_manifest.py  test_classifier_productionization.py  test_classifier_scoring.py  test_cli.py  test_cli_runtime_v7.py  (+75 more)
(+2229 files in other folders)
