[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-track-similarity"
version = "0.1.0"
description = "Local DJ track similarity utility for seamless set preparation."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<2.0",
  "mutagen>=1.47",
  "pydantic>=2",
  "typer>=0.12",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "joblib>=1.3",
]

[project.optional-dependencies]
ann = [
  "hnswlib>=0.8",
]
sonara = [
  "sonara>=0.2.0",
]
ml = [
  "torch==2.11.0",
  "torchaudio==2.11.0",
  "torchvision==0.26.0",
  "torchcodec==0.13.0",
  "nnaudio",
  "transformers",
  "huggingface-hub",
  "laion-clap>=1.1.7",
  "maest-infer",
  "muq==0.1.0",
]
rhythm-lab = [
  "scikit-learn>=1.4",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.8",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[project.scripts]
dj-sim = "dj_track_similarity.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dj_track_similarity*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "ml: requires torch / optional ML stack",
  "slow: long-running integration/benchmark tests",
  "evaluation: retrieval/evaluation layer",
]
